# deep_quality_estimation

./: .gitignore  README.md  dqe.ipynb  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  question.md
.github/workflows/: tests.yml
deep_quality_estimation/: __init__.py  center_of_mass.py  dataloader.py  model.py  transforms.py
deep_quality_estimation/core/: center_of_mass.py  dataloader.py  model.py
docs/source/: api.rst  conf.py  index.rst
tests/: test_model.py  test_transform.py
