[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry-dynamic-versioning]
enable = true

[tool.poetry]
name = "deep_quality_estimation"
version = "0.0.0"
description = ""
authors = [
    "Marcel Rosier <marcel.rosier@tum.de>, Florian Kofler <florian.kofler@tum.de>",
]
repository = "https://github.com/BrainLesion/deep_quality_estimation"
homepage = "https://github.com/BrainLesion/deep_quality_estimation"
documentation = "https://www.TODO.com"
readme = "README.md"


# Add the exclude field directly under [tool.poetry]
exclude = ["examples", "benchmark", "tests", "docs"]

[tool.poetry.dependencies]
python = ">=3.9"
nibabel = "^5.3.2"
scipy = [
    { version = "^1.14.1", python = ">=3.10" },
    { version = "<1.14", python = "<3.10" },
]
numpy = ">=1.21.2"
torch = "^2.5.1"
monai = "^1.4.0"
loguru = "^0.7.2"


[tool.poetry.dev-dependencies]
pytest = ">=8.0.0"
pytest-cov = ">=5.0.0"
flake8 = ">=4.0.1"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
Sphinx = ">=7.0.0"
sphinx-copybutton = ">=0.5.2"
pydata-sphinx-theme = ">=0.16.0"
myst-parser = ">=2.0.0"
